--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,14 +16,15 @@ android {
     dataBinding {
         enabled = true
     }
+
     buildTypes {
         debug {
             debuggable
-            buildConfigField "String", "ENDPOINT", "\"https://localhost:8080/\""
+            buildConfigField "String", "ENDPOINT", "\"http://5b840ba5db24a100142dcd8c.mockapi.io/api/\""
         }
         release {
             minifyEnabled false
-            buildConfigField "String", "ENDPOINT", "\"https://localhost:8080/\""
+            buildConfigField "String", "ENDPOINT", "\"http://5b840ba5db24a100142dcd8c.mockapi.io/api/\""
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -64,6 +65,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    /*PICASSO*/
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    /*CIRCLE_IMAGE_VIEW*/
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
