--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
         <activity
             android:name=".views.activities.SplashActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +23,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".views.activities.MainActivity" />
+        <activity
+            android:name=".views.activities.MainActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
