--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,17 @@
             android:name=".views.activities.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Splash">
+
+        </activity>
+
+        <activity
+            android:name=".views.activities.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".views.activities.MainActivity"
-            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
